# google-play-store-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  mcp.config.example.json  mcp.json  pyproject.toml  render.yaml
scripts/: deploy_render.sh  render_entrypoint.sh  run_stdio.sh
src/googleplay_mcp/: __main__.py  auth.py  cli.py  config.py  models.py  server.py
src/googleplay_mcp/tools/: experiments.py  experiments_orchestrator.py  listings.py  localization.py  purchases.py  reporting.py  reviews.py
tests/: conftest.py  test_experiments.py  test_reporting.py  test_reviews.py
